Native/Test/KL/CORE-141.out
CORE-141.kl:5:31: error: fixed array size must be greater than zero
