Native/Test/KL/CORE-141.kl
/*
 *  Copyright 2010-2012 Fabric Engine Inc. All rights reserved.
 */

function foo( Integer bufferID[0] )
{
}
